@@ -1,7 +1,7 @@
 # Maintainer: Chirantan Ekbote <chirantan.ekbote at gmail.com>
 
 pkgname=systools-git
-pkgver=20130219
+pkgver=0.11.0fe141f
 pkgrel=1
 pkgdesc='Small scripts to perform various system utility functions'
 arch=('i686 x86_64')
@@ -17,7 +17,8 @@ pkgver() {
 }
 
 package() {
-    cd "${srcdir}/${_gitname}"
-    install -Dm755 sysinfo "${pkgdir}/usr/bin/sysinfo"
-    install -Dm744 update_mirrorlist "${pkgdir}/etc/cron.weekly/update_mirrorlist"
+	cd scripts
+	install -Dm755 sysinfo "$pkgdir/usr/bin/sysinfo"
+	install -Dm744 motd "$pkgdir/etc/cron.daily/motd"
+	install -Dm744 update_mirrorlist "$pkgdir/etc/cron.weekly/update_mirrorlist"
 }
